--- a/toml/edmfx_box_gabls.toml
+++ b/toml/edmfx_box_gabls.toml
@@ -3,7 +3,7 @@ alias = "C_E"
 value = 0.044
 type = "float"
 
-[detr_coeff]
-alias = "detr_coeff"
-value = 0.01
+[EDMF_surface_area]
+alias = "surface_area"
+value = 1e-4
 type = "float"
