change edmfx advection

--- a/config/model_configs/edmfx_adv_test_box.yml
+++ b/config/model_configs/edmfx_adv_test_box.yml
@@ -1,18 +1,21 @@
-dt_save_to_disk: "100secs"
-initial_condition: "MoistAdiabaticProfileEDMFX"
-x_max: 10000.0
-hyperdiff: "true"
-z_elem: 45
-dt: "10secs"
-t_end: "1000secs"
-y_max: 10000.0
-y_elem: 2
-turbconv: "edmfx"
-x_elem: 2
-dz_bottom: 30.0
-ode_algo: "SSP33ShuOsher"
-config: "box"
-advection_test: true
-kappa_4: 1.0e8
 job_id: "edmfx_adv_test_box"
+initial_condition: "MoistAdiabaticProfileEDMFX"
+advection_test: true
+turbconv: "edmfx"
+ode_algo: "SSP33ShuOsher"
+edmfx_upwinding: "first_order"
+config: "box"
 moist: "equil"
+hyperdiff: "true"
+kappa_4: 1e8
+x_max: 1e4
+y_max: 1e4
+z_max: 3e4
+x_elem: 2
+y_elem: 2
+z_elem: 45
+dz_bottom: 30.0
+dt: "10secs"
+t_end: "3600secs"
+dt_save_to_disk: "100secs"
+toml: [toml/edmfx_box_advection.toml]
