CompatHelper: bump compat for CloudMicrophysics to 0.14, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ CUDA = "4"
 ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
-CloudMicrophysics = "0.13"
+CloudMicrophysics = "0.13, 0.14"
 Colors = "0.12"
 Dierckx = "0.5"
 DiffEqCallbacks = "2"
