--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -251,4 +251,4 @@ log_params:
   value: false
 output_default_diagnostics:
   help: "Output the default diagnostics associated to the selected atmospheric model"
-  value: true
+  value: false
