--- a/Project.toml
+++ b/Project.toml
@@ -75,7 +75,7 @@ OrdinaryDiffEq = "5, 6"
 Pkg = "1.8"
 RRTMGP = "0.9"
 RootSolvers = "0.2, 0.3, 0.4"
-SciMLBase = "1"
+SciMLBase = "1, 2"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.7"
