use mpiexec instead of srun for now

--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -69,7 +69,7 @@ steps:
           julia --project -e 'using CUDA; CUDA.versioninfo()'
           
           nsys profile --trace=nvtx,cuda --output=target_gpu_implicit_baroclinic_wave_4process/report
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
+          mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave_4process.yml
         artifact_paths: "target_gpu_implicit_baroclinic_wave_4process/*"
         agents:
