--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -42,36 +42,10 @@ steps:
   - group: "GPU target simulations"
     steps:
 
-      - label: "dry baroclinic wave"
-        key: "target_gpu_implicit_baroclinic_wave"
-        command: >
-          nsys profile --trace=nvtx,cuda --output=target_gpu_implicit_baroclinic_wave/report
-          julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave.yml
-        artifact_paths: "target_gpu_implicit_baroclinic_wave/*"
-        agents:
-          slurm_gpus: 1
-          slurm_time: 23:00:00
 
-      - label: "moist Held-Suarez"
-        key: "gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km"
-        command: >
-          nsys profile --trace=nvtx,cuda --output=gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km/report
-          julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file ${GPU_CONFIG_PATH}gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.yml
-        artifact_paths: "gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km/*"
-        agents:
-          slurm_gpus: 1
-          slurm_time: 23:00:00
-
-      - label: "dry baroclinic wave - 4 gpus"
-        key: "target_gpu_implicit_baroclinic_wave_4process"
+      - label: "test"
         command: >         
-          nsys profile --trace=nvtx,cuda --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{OMPI_COMM_WORLD_RANK}
-          mpiexec
-          julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave_4process.yml
-        artifact_paths: "target_gpu_implicit_baroclinic_wave_4process/*"
+          srun julia --project test.jl
         agents:
           slurm_gpus_per_task: 1
           slurm_ntasks: 4
