--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -42,11 +42,30 @@ steps:
   - group: "GPU target simulations"
     steps:
 
+      - label: "test"
+        command: >         
+          srun
+          nsys profile --trace=nvtx,cuda,mpi --mpi-impl=openmpi --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{PMI_RANK}
+          julia --project test.jl
+        agents:
+          slurm_gpus_per_task: 1
+          slurm_ntasks: 4
+
+      - label: "test_comms"
+        command: >         
+          srun
+          nsys profile --trace=nvtx,cuda,mpi --mpi-impl=openmpi --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{PMI_RANK}
+          julia --project test_comms.jl
+        agents:
+          slurm_gpus_per_task: 1
+          slurm_ntasks: 4
+
+
       - label: "dry baroclinic wave - 4 gpus"
         key: "target_gpu_implicit_baroclinic_wave_4process"
         command: >         
           srun
-          nsys profile --trace=nvtx,cuda --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{PMI_RANK}
+          nsys profile --trace=nvtx,cuda,mpi --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{PMI_RANK}
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave_4process.yml
         artifact_paths: "target_gpu_implicit_baroclinic_wave_4process/*"
