--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -115,7 +115,7 @@ device:
   value: "auto"
 reference_job_id:
   help: |-
-    Identifier of job to use as the "reference" solution in the quicklook plot; the current job's results get compared to the results of the quicklook job on the main branch (only used if `debugging_tc` is `true`)
+    Identifier of job to use as the "reference" solution in the quicklook plot; the current job's results get compared to the results of the quicklook job on the main branch
   value: ~
 post_process:
   help: "Post process [`true` (default), `false`]"
