--- a/config/model_configs/edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/edmfx_dycoms_rf01_box.yml
@@ -8,7 +8,8 @@ turbconv: edmfx
 edmfx_upwinding: first_order
 edmfx_entr_model: "ConstantCoefficient"
 edmfx_detr_model: "ConstantCoefficient"
-edmfx_sgs_flux: true
+edmfx_sgs_mass_flux: true
+edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: false
 prognostic_tke: false
 moist: equil
