--- a/config/model_configs/diagnostic_edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/diagnostic_edmfx_dycoms_rf01_box.yml
@@ -10,7 +10,8 @@ edmfx_upwinding: first_order
 edmfx_entr_model: "ConstantTimescale" 
 edmfx_detr_model: "ConstantCoefficient" 
 edmfx_nh_pressure: true 
-edmfx_sgs_flux: true
+edmfx_sgs_mass_flux: true
+edmfx_sgs_diffusive_flux: true
 moist: equil
 config: box 
 hyperdiff: "true" 
